before rebuilding my java environment

--- a/examples/Hello/data/lumarcaConfig.json
+++ b/examples/Hello/data/lumarcaConfig.json
@@ -3,7 +3,7 @@
   "x real units": 5.0,
   "z real units": 5.0,
   "furthest projection": 15.0,
-  "string x locations": [
+  "string z locations": [
     4.915888532340431,
     1.0662950369247608,
     0.4946956844676764,
