--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" output="bin" path="src"/>
+	<classpathentry excluding="info/lumarca/" kind="src" output="bin" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="/Users/AlbertHwang/Documents/workspace/libs/core.jar"/>
 	<classpathentry kind="output" path="resources/code"/>
 </classpath>
